@@ -12,15 +12,20 @@
 
     ## finally, it's north or south
     hemi <- tolower(substr(bx, 21L, 21L))
-    hyes <- hemi == "s" ## north not supported yet
+    hyes <- hemi %in% c("s", "n")
     if(!(!is.na(dts) & fyes & vyes & hyes)) return(NULL)
 
-
-    ## NSIDC projection and grid size for the Southern Hemisphere (not North yet)
-    prj <-  "+proj=stere +lat_0=-90 +lat_ts=-71 +lon_0=0 +k=1 +x_0=0 +y_0=0 +datum=WGS84 +units=m +no_defs +ellps=WGS84 +towgs84=0,0,0"
-    dims <- c(316L, 332L)
-    ext <- c(-3950000, 3950000, -3950000, 4350000)
-
+    if (hemi == "s") {
+        ## NSIDC projection and grid size for the Southern Hemisphere (not North yet)
+        prj <-  "+proj=stere +lat_0=-90 +lat_ts=-71 +lon_0=0 +k=1 +x_0=0 +y_0=0 +datum=WGS84 +units=m +no_defs +ellps=WGS84 +towgs84=0,0,0"
+        dims <- c(316L, 332L)
+        ext <- c(-3950000, 3950000, -3950000, 4350000)
+    } else {
+        ## northern hemisphere
+        prj <- "+proj=stere +lat_0=90 +lat_ts=70 +lon_0=-45 +k=1 +x_0=0 +y_0=0 +a=6378273 +b=6356889.449 +units=m +no_defs"
+        dims <- c(304, 448)
+        ext <- c(-3837500, 3762500, -5362500, 5837500)
+    }
     on.exit(close(con))
     con <- file(x, open = "rb")
 
